# rich-dataclass

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
rich_dataclass/: __init__.py  mixin.py  serializers.py  tools.py  types.py
rich_dataclass/converters/: __init__.py  abstract.py  converter.py  json.py
